Fixed issue with menu  transition on safari.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -110,8 +110,18 @@ textarea:focus {
   margin: 2% auto;
   border: 2px solid #00bcd4;
   border-radius: 30px;
-  width: 20%;
+  width: 23%;
   padding: 2%;
+}
+
+.post h2,
+.post h3 {
+  margin-bottom: 2%;
+}
+
+.post p {
+  width: 60%;
+  margin: 3% auto 0;
 }
 
 footer {
